--- a/mia/Views/Common/HXInfectView/HXInfectView.xib
+++ b/mia/Views/Common/HXInfectView/HXInfectView.xib
@@ -3,22 +3,28 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HXInfectView">
             <connections>
                 <outlet property="collectionView" destination="0Vp-v6-J8v" id="Xw3-bV-6if"/>
+                <outlet property="collectionViewWidthConstraint" destination="DrF-um-OCT" id="nlk-9N-yRJ"/>
+                <outlet property="infectButton" destination="c1K-Da-9IC" id="6Vq-R9-hY8"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="32"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="0Vp-v6-J8v">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="0Vp-v6-J8v">
+                    <rect key="frame" x="47" y="0.0" width="100" height="32"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="IqY-WZ-1Ye">
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="DrF-um-OCT"/>
+                    </constraints>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="IqY-WZ-1Ye">
                         <size key="itemSize" width="32" height="32"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -29,17 +35,32 @@
                         <outlet property="delegate" destination="-1" id="bbO-kg-Dk8"/>
                     </connections>
                 </collectionView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c1K-Da-9IC">
+                    <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="c1K-Da-9IC" secondAttribute="height" multiplier="1:1" id="TZ3-DY-tKR"/>
+                    </constraints>
+                    <state key="normal" image="D-InfectIcon"/>
+                    <connections>
+                        <action selector="infectButtonPressed" destination="-1" eventType="touchUpInside" id="fOy-Sw-jgb"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="0Vp-v6-J8v" firstAttribute="leading" secondItem="c1K-Da-9IC" secondAttribute="trailing" constant="15" id="GUy-6Z-Lc8"/>
                 <constraint firstItem="0Vp-v6-J8v" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="HcO-5z-nm4"/>
-                <constraint firstAttribute="trailing" secondItem="0Vp-v6-J8v" secondAttribute="trailing" id="IsL-4o-Gek"/>
                 <constraint firstAttribute="bottom" secondItem="0Vp-v6-J8v" secondAttribute="bottom" id="erj-75-QkG"/>
-                <constraint firstItem="0Vp-v6-J8v" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="wfm-Yn-pYo"/>
+                <constraint firstAttribute="bottom" secondItem="c1K-Da-9IC" secondAttribute="bottom" id="n0E-nu-caq"/>
+                <constraint firstItem="c1K-Da-9IC" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="xDR-5v-DyU"/>
+                <constraint firstItem="c1K-Da-9IC" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="zmz-RV-vqJ"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="375" y="366"/>
         </view>
     </objects>
+    <resources>
+        <image name="D-InfectIcon" width="30" height="30"/>
+    </resources>
 </document>
