--- a/mia/Base.lproj/Me.storyboard
+++ b/mia/Base.lproj/Me.storyboard
@@ -166,6 +166,7 @@
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8C3-gk-VoM">
                                                             <rect key="frame" x="33" y="33" width="35" height="35"/>
                                                             <state key="normal" image="M-PlayIcon"/>
+                                                            <state key="selected" image="M-PauseIcon"/>
                                                             <connections>
                                                                 <action selector="playButtonPressed" destination="Ed6-aM-ZxE" eventType="touchUpInside" id="8YJ-Ma-DDm"/>
                                                             </connections>
@@ -349,6 +350,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="M-PauseIcon" width="35" height="35"/>
         <image name="M-PlayIcon" width="35" height="35"/>
         <image name="PF-CommentIcon" width="20" height="20"/>
         <image name="PF-DeleteIcon" width="20" height="20"/>
